--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-OpenGrm NGram - Release 1.1.0
+OpenGrm NGram - Release 1.2.0
 
 The OpenGrm NGram library is used for making and modifying n-gram
 language models encoded as weighted finite-state transducers
@@ -6,12 +6,12 @@ language models encoded as weighted finite-state transducers
 create, access and manipulate n-gram models.
 
 REQUIREMENTS:
-  This version is known to work under Linux, MacOS, and Solaris using 
-  g++ (>= 4.2). Expected to work wherever adequate POSIX (dlopen, ssize_t, 
-  basename), c99 (snprintf, strtoll, <stdint.h>), and tr1 (<tr1/ordered_set>, 
-  <tr1/ordered_map>) support are available. It assumes you have installed
-  OpenFst (www.openfst.org) 1.3.3 or higher and have configure it with
-  the --enable-far flag.
+  This version is known to work under Linux g++ (>= 4.6) and MacOS X
+  using XCode 5. Expected to work wherever adequate POSIX (dlopen, ssize_t, 
+  basename), c99 (snprintf, strtoll, <stdint.h>), and C__11 (ordered_set>, 
+  ordered_map>, <forward_list>) support are available. It assumes you 
+  have installed OpenFst (www.openfst.org) 1.4.0 or higher and have 
+  configured it with the --enable-far flag.
   	
 INSTALLATION:
   Follow the generic GNU build system instructions in ./INSTALL.  We
