--- a/AUTHORS
+++ b/AUTHORS
@@ -1,11 +1,13 @@
-Principal Author:
+Google, Inc.
+
+Principal developer:
 
 Brian Roark <roark@google.com>
 
 Contributors:
 
-Cyril Allauzen    <allauzen@google.com>
-Kyle Gorman       <kbg@google.com>
-Vitaly Kuznetsov  <vitaly@cims.nyu.edu>
-Michael Riley     <riley@google.com>
-Richard Sproat    <rws@cslu.ogi.com>
+Cyril Allauzen
+Kyle Gorman
+Vitaly Kuznetsov
+Michael Riley
+Richard Sproat
