--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,4 @@
+  * Compatibility with OpenFst version 1.7.6 (1.3.9)
   * Compatibility with OpenFst version 1.7.4 (1.3.8)
   * Modernizations to test scripts (1.3.7)
   * Compatibility with OpenFst version 1.7.3 (1.3.7)
