--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,5 @@
+  * Compatibility with OpenFst version 1.7.8 (1.3.11)
+  * Compatibility with OpenFst version 1.7.7 (1.3.10)
   * Compatibility with OpenFst version 1.7.6 (1.3.9)
   * Compatibility with OpenFst version 1.7.4 (1.3.8)
   * Modernizations to test scripts (1.3.7)
