--- a/AUTHORS
+++ b/AUTHORS
@@ -1,13 +1,1 @@
-Google, LLC.
-
-Principal developer:
-
-Brian Roark <roark@google.com>
-
-Contributors:
-
-Cyril Allauzen
-Kyle Gorman
-Vitaly Kuznetsov
-Michael Riley
-Richard Sproat
+Google Inc.
