--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,4 @@
+  * Compatibility with OpenFst version 1.8.2 (1.3.14)
   * Compatibility with OpenFst version 1.8.1 (1.3.13)
   * Compatibility with OpenFst version 1.8.0 (1.3.12)
   * Compatibility with OpenFst version 1.7.8 (1.3.11)
